@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-06T00:41:23Z",
-  "count_outdated" : 2913,
-  "uniques_outdated" : 943,
+  "timestamp" : "2025-02-08T00:40:25Z",
+  "count_outdated" : 2924,
+  "uniques_outdated" : 944,
   "count" : 2927,
   "uniques" : 947,
   "views" : [
-    {
-      "timestamp": "2025-01-24T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-29T00:00:00Z",
       "count": 2,
