@@ -1,12 +1,7 @@
 {
-  "count": 14,
-  "uniques": 4,
+  "count": 3,
+  "uniques": 3,
   "views": [
-    {
-      "timestamp": "2025-01-24T00:00:00Z",
-      "count": 11,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-01-29T00:00:00Z",
       "count": 2,
